<resources>
    <string name="app_name">7agz kora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="my_games">My games</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="make_friends">Make friends</string>
    <string name="play_football">Play football</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="apply">Apply</string>
    <string name="add_match">Add Match</string>
</resources>